Update example module styles

--- a/examples/progress.html
+++ b/examples/progress.html
@@ -9,10 +9,12 @@
 </head>
 <body>
 
-  <div class="k-container">
-    <h1 class="k-example__title">Progress</h1>
-    <div class="k-progress">
-      <div class="k-progress__bar"></div>
+  <div class="k-example">
+    <div class="k-container">
+      <h1 class="k-example__title">Progress</h1>
+      <div class="k-progress">
+        <div class="k-progress__bar"></div>
+      </div>
     </div>
   </div>
 
