Update style-guide structure

--- a/style-guide/grid.html
+++ b/style-guide/grid.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Grid</title>
+  <title>Grid - Style Guide</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../dist/styles.css">
 </head>
@@ -12,11 +12,13 @@
   <div class="k-example">
     <div class="k-container">
       <h1 class="k-example__title">Grid</h1>
+      <!-- k-row -->
       <div class="k-row">
         <div class="k-row__col k-row__col--4">1</div>
         <div class="k-row__col k-row__col--4">2</div>
         <div class="k-row__col k-row__col--4">3</div>
       </div>
+      <!-- /k-row -->
     </div>
   </div>
 
