--- a/style-guide/progress.html
+++ b/style-guide/progress.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Progress</title>
+  <title>Progress - Style Guide</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../dist/styles.css">
 </head>
@@ -12,9 +12,11 @@
   <div class="k-example">
     <div class="k-container">
       <h1 class="k-example__title">Progress</h1>
+      <!-- k-progress -->
       <div class="k-progress">
         <div class="k-progress__bar"></div>
       </div>
+      <!-- /k-progress -->
     </div>
   </div>
 
