--- a/style-guide/form-item.html
+++ b/style-guide/form-item.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Card</title>
+  <title>Form Item - Style Guide</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../dist/styles.css">
 </head>
