Add alternate colors for button

--- a/style-guide/button.html
+++ b/style-guide/button.html
@@ -15,8 +15,29 @@
 
       <div class="k-example__section">
         <h2 class="k-example__subtitle">Default</h2>
-        <!-- k-btn -->
+
+        <!-- k-btn | primary -->
         <button class="k-btn k-btn--primary">Primary</button>
+        <!-- /k-btn -->
+      </div>
+
+      <div class="k-example__section">
+        <h2 class="k-example__subtitle">Colors</h2>
+
+        <!-- k-btn | green -->
+        <button class="k-btn k-btn--green">Green</button>
+        <!-- /k-btn -->
+
+        <!-- k-btn | pink -->
+        <button class="k-btn k-btn--pink">Pink</button>
+        <!-- /k-btn -->
+
+        <!-- k-btn | violet -->
+        <button class="k-btn k-btn--violet">Violet</button>
+        <!-- /k-btn -->
+
+        <!-- k-btn | blue -->
+        <button class="k-btn k-btn--blue">Blue</button>
         <!-- /k-btn -->
       </div>
     </div>
