Update global colors

--- a/style-guide/button.html
+++ b/style-guide/button.html
@@ -19,6 +19,10 @@
         <!-- k-btn | primary -->
         <button class="k-btn k-btn--primary">Primary</button>
         <!-- /k-btn -->
+
+        <!-- k-btn | secondary -->
+        <button class="k-btn k-btn--secondary">Secondary</button>
+        <!-- /k-btn -->
       </div>
 
       <div class="k-example__section">
