Add image version for card module

--- a/style-guide/card.html
+++ b/style-guide/card.html
@@ -12,12 +12,43 @@
   <div class="k-example">
     <div class="k-container">
       <h1 class="k-example__title">Card</h1>
-      <!-- k-card -->
-      <div class="k-card">
-        <h3 class="k-card__title">Card Title</h3>
-        <p class="k-card__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est debitis architecto iste dolorem quibusdam eligendi quasi expedita perferendis corporis. Amet iste nulla sapiente eum et voluptate necessitatibus atque debitis non?</p>
+
+      <div class="k-example__section">
+        <h2 class="k-example__subtitle">Default</h2>
+
+        <!-- k-row -->
+        <div class="k-row">
+          <div class="k-row__col k-row__col--4">
+            <!-- k-card -->
+            <div class="k-card">
+              <h3 class="k-card__title">Card Title</h3>
+              <p class="k-card__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est debitis architecto iste dolorem quibusdam eligendi quasi expedita perferendis corporis. Amet iste nulla sapiente eum et voluptate necessitatibus atque debitis non?</p>
+            </div>
+            <!-- /k-card -->
+          </div>
+        </div>
+        <!-- /k-row -->
       </div>
-      <!-- /k-card -->
+
+      <div class="k-example__section">
+        <h2 class="k-example__subtitle">Image</h2>
+
+        <!-- k-row -->
+        <div class="k-row">
+          <div class="k-row__col k-row__col--4">
+            <!-- k-card -->
+            <div class="k-card">
+              <div class="k-card__image-container">
+                <img src="../img/demo/card-01.jpg" alt="" class="k-card__image" />
+              </div>
+              <h3 class="k-card__title">Card Title</h3>
+              <p class="k-card__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est debitis architecto iste dolorem quibusdam eligendi quasi expedita perferendis corporis. Amet iste nulla sapiente eum et voluptate necessitatibus atque debitis non?</p>
+            </div>
+            <!-- /k-card -->
+          </div>
+        </div>
+        <!-- /k-row -->
+      </div>
     </div>
   </div>
 
